Adição de exemplo de interpolação

--- a/list_task/src/app/item-task/item-task.component.html
+++ b/list_task/src/app/item-task/item-task.component.html
@@ -1,1 +1,6 @@
-<p>item-task works!</p>
+<li>
+    <div>
+        <h5> {{ task.name }}</h5>
+    </div>
+    <button>{{ task.isCompleted ? 'Reabrir' : 'Finalizar' }} </button>
+</li>
