--- a/list_task/src/app/item-task/item-task.component.html
+++ b/list_task/src/app/item-task/item-task.component.html
@@ -4,5 +4,7 @@
             {{ task.name }}
         </h5>
     </div>
-    <button>{{ task.isCompleted ? 'Reabrir' : 'Finalizar' }} </button>
+    <button (click)="changeStatusTask()">
+        {{ task.isCompleted ? 'Reabrir' : 'Finalizar' }} 
+    </button>
 </li>
