--- a/list_task/src/app/app.component.html
+++ b/list_task/src/app/app.component.html
@@ -4,8 +4,14 @@
     </div>
 
     <div>
-        @for (task of taskList; track $index) {
-        <app-item-task [task]="task" (eventChageStatusTask)="changeCompleteTask($event)" />
+        @if (taskList.length > 0) {
+        <ul>
+            @for (task of taskList; track $index) {
+            <app-item-task [task]="task" (eventChageStatusTask)="changeCompleteTask($event)" />
+            }
+        </ul>
+        }@else{
+        <p>Nenhuma tarefa encontrada.</p>
         }
     </div>
 </div>
