--- a/user_management/src/app/pages/user-form/user-form.component.html
+++ b/user_management/src/app/pages/user-form/user-form.component.html
@@ -1,1 +1,23 @@
-<p>user-form works!</p>
+<div class="container mt-4">
+    <h2>{{ editMode ? 'Editar Usuário' : 'Adicionar Usuário' }}</h2>
+    <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+      <div class="mb-3">
+        <label for="name" class="form-label">Nome</label>
+        <input type="text" id="name" class="form-control" formControlName="name" />
+      </div>
+
+      <div class="mb-3">
+        <label for="email" class="form-label">Email</label>
+        <input type="email" id="email" class="form-control" formControlName="email" />
+      </div>
+
+      <div class="mb-3">
+        <label for="cpf" class="form-label">CPF</label>
+        <input type="text" id="cpf" class="form-control" formControlName="cpf" />
+      </div>
+
+      <button type="submit" class="btn btn-primary">
+        {{ editMode ? 'Atualizar' : 'Adicionar' }}
+      </button>
+    </form>
+</div>
