Implementação de base da validação

--- a/user_management/src/app/pages/user-form/user-form.component.html
+++ b/user_management/src/app/pages/user-form/user-form.component.html
@@ -16,7 +16,7 @@
         <input type="text" id="cpf" class="form-control" formControlName="cpf" />
       </div>
 
-      <button type="submit" class="btn btn-primary">
+      <button type="submit" class="btn btn-primary" [disabled]="userForm.invalid">
         {{ editMode ? 'Atualizar' : 'Adicionar' }}
       </button>
     </form>
