--- a/deputados_information/src/app/pages/deputado-details/deputado-details.component.html
+++ b/deputados_information/src/app/pages/deputado-details/deputado-details.component.html
@@ -1,1 +1,44 @@
-<p>deputado-details works!</p>
+<div class="container">
+    <div class="bg-primary text-white my-4 py-3 d-flex align-items-center justify-content-between">
+        <button class="btn btn-light ms-3" routerLink="/">
+            ← Voltar
+        </button>
+        <div class="text-center flex-grow-1">
+            <h1 class="mb-0">Detalhes do deputado</h1>
+        </div>
+    </div>
+
+    @if(hasError){
+    <app-alert-error />
+    }
+
+    @if (isLoading) {
+    <app-loading />
+    }
+
+    @if(deputado){
+    <div class="d-flex flex-column flex-md-row mb-3">
+        <!-- Imagem -->
+        <img [src]="deputado.urlFoto" alt="{{ deputado.nome }}" class="img-thumbnail me-3" />
+
+        <!-- Detalhes -->
+        <div>
+            <h2 class="mb-1">{{ deputado.nome }}</h2>
+            <p class="mb-2">{{ "Partido: " + deputado.siglaPartido }}</p>
+
+            <div class="mt-3">
+                <h3>Mais informações</h3>
+                <p>Nome Civil: {{ deputado.details!.nomeCivil }}</p>
+                <p>Data de Nascimento: {{ deputado.details!.dataNascimento }}</p>
+                <p>Situação: {{ deputado.details!.situacao}}</p>
+                <p>Sigla UF: {{ deputado.details!.siglaUf}}</p>
+            </div>
+        </div>
+
+        <button class="btn mt-2 mt-md-0 ms-md-auto align-self-start" [class.btn-primary]="!deputado.seguido"
+            [class.btn-danger]="deputado.seguido" (click)="onChangeSeguir()">
+            {{ deputado.seguido ? 'Deixar de Seguir' : 'Seguir' }}
+        </button>
+    </div>
+    }
+</div>
