Adição do NgOptimizedImage

--- a/deputados_information/src/app/pages/deputados-list/components/deputado-card/deputado-card.component.html
+++ b/deputados_information/src/app/pages/deputados-list/components/deputado-card/deputado-card.component.html
@@ -1,9 +1,12 @@
   <div class="card deputado-card d-flex flex-row">
     <div class="image-container">
       <img
-        [src]="deputado.urlFoto"
+        ngSrc="{{ deputado.urlFoto }}"
         alt="Foto de {{ deputado.nome }}"
+        width="150"
+        height="150"
         class="deputado-photo"
+        loading="lazy"
       />
     </div>
     <div class="card-body">
