--- a/deputados_information/src/app/pages/deputado-details/deputado-details.component.html
+++ b/deputados_information/src/app/pages/deputado-details/deputado-details.component.html
@@ -29,7 +29,7 @@
             <div class="mt-3">
                 <h3>Mais informações</h3>
                 <p>Nome Civil: {{ deputado.details!.nomeCivil }}</p>
-                <p>Data de Nascimento: {{ deputado.details!.dataNascimento }}</p>
+                <p>Data de Nascimento: {{ deputado.details!.dataNascimento | date:'dd/MM/yyyy' }}</p>
                 <p>Situação: {{ deputado.details!.situacao}}</p>
                 <p>Sigla UF: {{ deputado.details!.siglaUf}}</p>
             </div>
